--- a/package.json
+++ b/package.json
@@ -47,17 +47,26 @@
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
     "@nativescript/angular": "~11.8.0",
-    "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~3.0.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "gem": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.3",
     "reflect-metadata": "~0.1.13",
     "rxjs": "~6.6.7",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "~11.2.7",
+    "@nativescript/ios": "8.0.0",
     "@nativescript/types": "~8.0.0",
     "@nativescript/webpack": "beta",
     "@ngtools/webpack": "~11.2.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/body-parser": "^1.19.0",
+    "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
     "typescript": "~4.0.0"
   },
   "private": "true",
